fix(form-fields): fix input icon colors on dark mode

--- a/shared/styles/custom-element.scss
+++ b/shared/styles/custom-element.scss
@@ -609,6 +609,10 @@ custom-table[header-dark] {
                 @apply text-white;
             }
         }
+
+        .mat-datepicker-toggle button {
+            color: #fff;
+        }
     
         nav {
             .mat-tab-links {
